[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="0" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 128 )
scale = Vector2( 0.25, 0.25 )

[node name="1" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 128 )
scale = Vector2( 0.25, 0.25 )

[node name="2" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 128 )
scale = Vector2( 0.25, 0.25 )

[node name="3" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 288 )
scale = Vector2( 0.25, 0.25 )

[node name="4" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 288 )
scale = Vector2( 0.25, 0.25 )

[node name="5" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 288 )
scale = Vector2( 0.25, 0.25 )

[node name="6" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 448 )
scale = Vector2( 0.25, 0.25 )

[node name="7" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 448 )
scale = Vector2( 0.25, 0.25 )

[node name="8" parent="." instance=ExtResource( 1 )]
position = Vector2( 672, 448 )
scale = Vector2( 0.25, 0.25 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 24, 2.2069 )
scale = Vector2( 1, 1.93103 )
color = Color( 0.12549, 0.635294, 0.6, 1 )
polygon = PoolVector2Array( 400, 32, 400, 264, 416, 264, 416, 32 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 184, 2.2069 )
scale = Vector2( 1, 1.93103 )
color = Color( 0.12549, 0.635294, 0.6, 1 )
polygon = PoolVector2Array( 400, 32, 400, 264, 416, 264, 416, 32 )

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2( 800, -40 )
rotation = 1.5708
scale = Vector2( 1, 1.93103 )
color = Color( 0.12549, 0.635294, 0.6, 1 )
polygon = PoolVector2Array( 400, 32, 400, 264, 416, 264, 416, 32 )

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2( 800, -200 )
rotation = 1.5708
scale = Vector2( 1, 1.93103 )
color = Color( 0.12549, 0.635294, 0.6, 1 )
polygon = PoolVector2Array( 400, 32, 400, 264, 416, 264, 416, 32 )

[node name="Label" type="Label" parent="."]
margin_left = 256.0
margin_top = 544.0
margin_right = 768.0
margin_bottom = 568.0
text = "Test"
align = 1

[connection signal="input_event" from="0" to="." method="_on_0_input_event"]
[connection signal="input_event" from="1" to="." method="_on_1_input_event"]
[connection signal="input_event" from="2" to="." method="_on_2_input_event"]
[connection signal="input_event" from="3" to="." method="_on_3_input_event"]
[connection signal="input_event" from="4" to="." method="_on_4_input_event"]
[connection signal="input_event" from="5" to="." method="_on_5_input_event"]
[connection signal="input_event" from="6" to="." method="_on_6_input_event"]
[connection signal="input_event" from="7" to="." method="_on_7_input_event"]
[connection signal="input_event" from="8" to="." method="_on_8_input_event"]
